[package]
name = "rlbox_lucet_sandbox"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
failure = ">=0.1.3"                    # Experimental error handling abstraction.
goblin = ">=0.0.17"                    # An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate
lucet-wasi = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="c66c635f2cdc48a92e3c1e0dbd4e83ee4f7b2587" }
lucet-runtime = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="c66c635f2cdc48a92e3c1e0dbd4e83ee4f7b2587" }
lucet-runtime-internals = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="c66c635f2cdc48a92e3c1e0dbd4e83ee4f7b2587" }
lucet-module = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="c66c635f2cdc48a92e3c1e0dbd4e83ee4f7b2587" }
# lucet-wasi = { path = "../lucet_sandbox_compiler/lucet-wasi" }
# lucet-runtime = { path = "../lucet_sandbox_compiler/lucet-runtime" }
# lucet-runtime-internals = { path = "../lucet_sandbox_compiler/lucet-runtime/lucet-runtime-internals" }
# lucet-module = { path = "../lucet_sandbox_compiler/lucet-module" }

[lib]
name = "rlbox_lucet_sandbox"
crate-type = ["rlib", "staticlib"]