[package]
name = "rlbox_lucet_sandbox"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
failure = ">=0.1.3"                    # Experimental error handling abstraction.
goblin = ">=0.0.17"                    # An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate
lucet-wasi-wasmsbx = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="23d631fb3be3f7ddd2c4cb63618d964a0cca3054" }
lucet-runtime-wasmsbx = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="23d631fb3be3f7ddd2c4cb63618d964a0cca3054" }
lucet-runtime-internals-wasmsbx = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="23d631fb3be3f7ddd2c4cb63618d964a0cca3054" }
lucet-module-wasmsbx = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="23d631fb3be3f7ddd2c4cb63618d964a0cca3054" }
# lucet-wasi = { path = "../lucet_sandbox_compiler/lucet-wasi" }
# lucet-runtime = { path = "../lucet_sandbox_compiler/lucet-runtime" }
# lucet-runtime-internals = { path = "../lucet_sandbox_compiler/lucet-runtime/lucet-runtime-internals" }
# lucet-module = { path = "../lucet_sandbox_compiler/lucet-module" }

[lib]
name = "rlbox_lucet_sandbox"
crate-type = ["rlib", "staticlib"]