[package]
name = "rlbox_lucet_sandbox"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
failure = ">=0.1.3"                    # Experimental error handling abstraction.
goblin = ">=0.0.17"                    # An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate
lucet-wasi = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="22c86233fe7b2130c551cddf6d664b06a05e8a23", package = "lucet-wasi-wasmsbx" }
lucet-runtime = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="22c86233fe7b2130c551cddf6d664b06a05e8a23", package = "lucet-runtime-wasmsbx" }
lucet-runtime-internals = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="22c86233fe7b2130c551cddf6d664b06a05e8a23", package = "lucet-runtime-internals-wasmsbx" }
lucet-module = { git = "https://github.com/PLSysSec/lucet_sandbox_compiler", rev="22c86233fe7b2130c551cddf6d664b06a05e8a23", package = "lucet-module-wasmsbx" }
# lucet-wasi = { path = "../lucet_sandbox_compiler/lucet-wasi" }
# lucet-runtime = { path = "../lucet_sandbox_compiler/lucet-runtime" }
# lucet-runtime-internals = { path = "../lucet_sandbox_compiler/lucet-runtime/lucet-runtime-internals" }
# lucet-module = { path = "../lucet_sandbox_compiler/lucet-module" }

[lib]
name = "rlbox_lucet_sandbox"
crate-type = ["rlib", "staticlib"]